fix scrollbar style

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -322,8 +322,14 @@ img.portrait {
 div.collapsible {
   /* padding-left: calc(var(--arrow-size) / 2); */
   max-height:   var(--collapse-height);
-  overflow:     hidden;  
+  overflow-y: scroll; 
   transition:   max-height 0.5s ease-out;
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+}
+
+div.collapsible::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
 
 
